Restructure project in a manor that actually allows people to develop for it. Introduce proper testing and benchmark aggregating. Build a proper modularized gradle project. Remove all useless command line arguments. Cleanup a bunch of code warnings, the ones remaining require functional/structural changes and will be done later.